--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(0, 255, 221);
-    color:rgb(153, 13, 158);
+    color:rgb(153, 13, 158); 
 }
 
 /* Game area formatting */
@@ -21,4 +21,19 @@ body {
     flex-direction: row;
     justify-content: start;
     width: 60%;
+}
+
+/* Area with clicker and stats for harvest. */
+.harvest-section {
+    padding-right: 70px;
+}
+
+.harvest-section .meal-mined {
+    font-size: 1.5em;
+    margin-bottom: 0;
+}
+
+.harvest-section .meal-per-second {
+    margin-top: 0;
+    padding: 0;
 }
