--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,22 @@
 body {
-    background-color: rgb(0, 255, 221);
-    color:rgb(153, 13, 158); 
+    background-color: rgb(36, 37, 37);
+    color:rgb(158, 54, 13); 
 }
 
 /* Game area formatting */
 .game-container {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
 }
 
 .header-logo {
     font-size: 4rem;
+    margin-bottom: 0;
+}
+
+.new-game-btn {
+    margin-left: 180px;
 }
 
 /* Gameplay Area*/
