--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,20 @@ body {
     color:rgb(158, 54, 13);
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: auto;
+    overflow-x: scroll;
+    overflow-y: scroll;
+    white-space: nowrap;
+}
+
+.game-area {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    margin: 0;
+    padding: 0;
 }
 
 /* Game area formatting */
@@ -11,7 +25,7 @@ body {
     align-items: center;
     flex-direction: row;
     margin-top: 0;
-    padding-top: 0;
+    padding-top: 5px;
 }
 
 .header-logo {
@@ -44,19 +58,20 @@ body {
 }
 
 
-
 /* Gameplay Area*/
-
 .gameplay-section {
     display: flex;
-    flex-direction: row;
-    justify-content: start;
-    width: 60%;
+    flex-direction: column;
+    align-items: center;
+    width: 220px;
+    padding-left: 30px;
+    white-space: nowrap;
 }
 
 /* Area with clicker and stats for harvest. */
 .harvest-section {
     padding-right: 70px;
+    margin-left: 20px;
 }
 
 .harvest-section .meal-mined {
@@ -67,4 +82,55 @@ body {
 .harvest-section .meal-per-second {
     margin-top: 0;
     padding: 0;
+}
+
+/* Worker list section */
+.workers-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 220px;
+    height: auto;
+    overflow: scroll;
+}
+
+.workers-section > h3{
+    padding: 0;
+    padding-top: 10px;
+    margin: 5px;
+    margin-top: 10px;
+    font-size: 1.4em;
+}
+
+.worker-list {
+    list-style-type: none;
+    width: 210px;
+    margin-left: 0;
+    padding: 0;
+    padding-bottom: 30px;
+    height: auto;
+}
+
+.worker-item {
+    height: 60px;
+    width: 200px;
+}
+
+.worker-item p {
+    padding: 0;
+    margin: 0;
+}
+
+/* Footer section */
+
+.footer {
+    font-size: 1.4em;
+    width: 100%;
+    height: 100px;
+    margin: 0;
+    margin-bottom: -100px;
+    padding: 30px;
+    padding-bottom: -100px;
+    background-color: rgb(36, 37, 37);
+    color:rgb(158, 54, 13);
 }
