--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,8 @@ body {
     align-items: center;
     flex-direction: row;
     margin-top: 0;
+    margin-bottom: 0;
+    padding-bottom: 0;
     padding-top: 5px;
 }
 
@@ -70,8 +72,12 @@ body {
 
 /* Area with clicker and stats for harvest. */
 .harvest-section {
-    padding-right: 70px;
-    margin-left: 20px;
+    padding: 0;
+}
+
+.harvest-section p {
+    padding: 0;
+    margin: 0;
 }
 
 .harvest-section .meal-mined {
@@ -82,6 +88,15 @@ body {
 .harvest-section .meal-per-second {
     margin-top: 0;
     padding: 0;
+}
+
+.harvest-section .harvest-meal-btn {
+    margin-top: 10px;
+    padding: 20px;
+    padding-left: 60px;
+    padding-right: 60px;
+    border-radius: 20px;
+
 }
 
 /* Worker list section */
@@ -97,7 +112,7 @@ body {
 .workers-section > h3{
     padding: 0;
     padding-top: 10px;
-    margin: 5px;
+    margin: 0;
     margin-top: 10px;
     font-size: 1.4em;
 }
@@ -106,8 +121,9 @@ body {
     list-style-type: none;
     width: 210px;
     margin-left: 0;
+    margin-bottom: 0;
     padding: 0;
-    padding-bottom: 30px;
+    padding-bottom: 10px;
     height: auto;
 }
 
@@ -126,7 +142,7 @@ body {
 .footer {
     font-size: 1.4em;
     width: 100%;
-    height: 100px;
+    height: 50px;
     margin: 0;
     margin-bottom: -100px;
     padding: 30px;
